--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "vue-components-wangyan",
+  "name": "vue-components-wangyan-dome",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "dist/index.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "plugins": "vue-cli-service build --target lib --name index ./src/plugins/index.js",
+    "pub": "npm publish"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
+    "view-design": "^4.5.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-components-wangyan": "^0.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
